{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 298,
  "lineage": "f677f8a2-2af7-f8f3-d6ec-7a6892418abc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/networkInterfaces/db-nic",
            "internal_domain_name_suffix": "eqdy3khhitxelpa3jodso5iuhf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/publicIPAddresses/test-pip",
                "subnet_id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/virtualNetworks/kunal-network/subnets/db-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-61-33-8E",
            "name": "db-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "kunal-rg",
            "tags": {
              "environment": "db"
            },
            "virtual_machine_id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Compute/virtualMachines/db-server"
          },
          "dependencies": [
            "azurerm_public_ip.public-ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db-subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/networkInterfaces/kunal-nic",
            "internal_domain_name_suffix": "eqdy3khhitxelpa3jodso5iuhf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.16",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/publicIPAddresses/test-pip",
                "subnet_id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/virtualNetworks/kunal-network/subnets/internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-11-E3-C7",
            "name": "kunal-nic",
            "private_ip_address": "10.0.2.16",
            "private_ip_addresses": [
              "10.0.2.16"
            ],
            "resource_group_name": "kunal-rg",
            "virtual_machine_id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Compute/virtualMachines/kunal-machine"
          },
          "dependencies": [
            "azurerm_public_ip.public-ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/networkSecurityGroups/db-server-nsg",
            "location": "westeurope",
            "name": "db-server-nsg",
            "resource_group_name": "kunal-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/networkSecurityGroups/kunal-vm-nsg",
            "location": "westeurope",
            "name": "kunal-vm-nsg",
            "resource_group_name": "kunal-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "db-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/publicIPAddresses/db-server-pip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "52.166.142.255",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "db-server-pip",
            "resource_group_name": "kunal-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/publicIPAddresses/test-pip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "4.180.140.131",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "test-pip",
            "resource_group_name": "kunal-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/virtualNetworks/kunal-network/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kunal-rg",
            "virtual_network_name": "kunal-network"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/virtualNetworks/kunal-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kunal-rg",
            "virtual_network_name": "kunal-network"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/virtualNetworks/kunal-network/subnets/internal",
            "network_security_group_id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/networkSecurityGroups/kunal-vm-nsg",
            "subnet_id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/virtualNetworks/kunal-network/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a88e0724-44e7-45ee-bc1d-4b87277d143d",
            "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/virtualNetworks/kunal-network",
            "location": "westeurope",
            "name": "kunal-network",
            "resource_group_name": "kunal-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/virtualNetworks/kunal-network/subnets/internal",
                "name": "internal",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/networkSecurityGroups/kunal-vm-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b6bc018a-adec-45c6-bf16-bd8a24b927ac/resourceGroups/kunal-rg/providers/Microsoft.Network/virtualNetworks/kunal-network/subnets/db-subnet",
                "name": "db-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}